--- a/web-static/index.html
+++ b/web-static/index.html
@@ -9,7 +9,6 @@
     <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
     <title>p2pool - node stats</title>
-
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,400,400italic,100,100italic,500,500italic,700,700italic,900,900italic" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400italic,700italic,400,700' rel='stylesheet' type='text/css'>
 
@@ -65,6 +64,8 @@
     <div class="container">
       <div class="page-header">
         <h1>p2pool <span id='currency'></span> &dash; node dashboard</h1>
+	<a href="old/"><h4>Old p2pool Static Page</h4></a>
+	<a href="old/"><h4>First p2pool Static Page</h4></a>
         <b>
           <small>
             <span id='_node' class='hidden'>Node: </span>
